--- a/yazi/yazi.toml
+++ b/yazi/yazi.toml
@@ -119,6 +119,7 @@ suppress_preload = false
 
 [plugin]
 prepend_previewers = [{ name = "*.md", run = "glow" }]
+prepend_fetchers = [{ id = "git", name = "*", run = "git"},{ id = "git", name = "*/", run = "git"}]
 
 fetchers = [
   # Mimetype
