--- a/yazi/package.toml
+++ b/yazi/package.toml
@@ -1,14 +1,42 @@
-[plugin]
-deps = [
-  { use = "Reledia/glow", rev = "4e016fa" },
-  { use = "yazi-rs/plugins:jump-to-char", rev = "b659791" },
-  { use = "yazi-rs/plugins:chmod", rev = "b659791" },
-  { use = "KKV9/compress", rev = "60b24af" },
-  { use = "Lil-Dank/lazygit", rev = "c82794f" },
-  { use = "llanosrocas/githead", rev = "bf150f3" },
-  { use = "yazi-rs/plugins:max-preview", rev = "2b001d2" },
-  { use = "yazi-rs/plugins:git", rev = "932b931" }
-]
+[[plugin.deps]]
+use = "Reledia/glow"
+rev = "2da96e3"
+hash = "f9ee1436e3b853508d87f7d49dce56e6"
+
+[[plugin.deps]]
+use = "KKV9/compress"
+rev = "3b4ed26"
+hash = "5170cc80898895f83c9267e17c58be00"
+
+[[plugin.deps]]
+use = "Lil-Dank/lazygit"
+rev = "7a08a09"
+hash = "a1fa2b3e1826c3a34804ea8c548e9f80"
+
+[[plugin.deps]]
+use = "llanosrocas/githead"
+rev = "c90882f"
+hash = "3c3933ed61aa24d802d6b06d3556484"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:jump-to-char"
+rev = "63f9650"
+hash = "30fc0b37f03a597b92d387268319450f"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:chmod"
+rev = "63f9650"
+hash = "d0ad0c1946b46a30c8489735fe8de41c"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:git"
+rev = "63f9650"
+hash = "bf6f074cd41ee33c3360341d168f9733"
+
+[[plugin.deps]]
+use = "yazi-rs/plugins:smart-enter"
+rev = "63f9650"
+hash = "a7ab702e1ef0c097defbc976ed34c186"
 
 [flavor]
 deps = []
