feat: kitty光标移动动画配置

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -16,7 +16,7 @@ background_opacity 1.0
 # bold_italic_font auto
 
 # Font size (in pts)
-font_size        15.0
+font_size        16.0
 
 # The foreground color
 foreground       #c0b18b
@@ -38,7 +38,11 @@ cursor_shape     block
 
 # The interval (in seconds) at which to blink the cursor. Set to zero to
 # disable blinking.
-cursor_blink_interval     0.5
+cursor_blink_interval     0
+
+cursor_trail 3
+cursor_trail_decay 0.1 0.4
+cursor_trail_start_threshold 2
 
 # Stop blinking cursor after the specified number of seconds of keyboard inactivity. Set to
 # zero or a negative number to never stop blinking.
@@ -76,8 +80,8 @@ enabled_layouts *
 # size as the previous instance. If disabled, the window will initially have size configured
 # by initial_window_width/height, in pixels.
 remember_window_size   no
-initial_window_width   640
-initial_window_height  400
+initial_window_width   900
+initial_window_height  600
 
 # Delay (in milliseconds) between screen updates. Decreasing it, increases fps
 # at the cost of more CPU usage. The default value yields ~100fps which is more
