--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -91,11 +91,12 @@ decoration {
     # Change transparency of focused and unfocused windows
     active_opacity = 1
     inactive_opacity = 0.8
-
-    drop_shadow = true
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+	shadow {
+		enabled = true
+		range = 4
+		render_power = 3
+		color = rgba(1a1a1aee)
+	}
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
     blur {
@@ -113,14 +114,28 @@ animations {
 
     # Default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
-    bezier = myBezier, 0.05, 0.9, 0.1, 1.05
+	bezier = easeOutQuint,0.23,1,0.32,1
+    bezier = easeInOutCubic,0.65,0.05,0.36,1
+    bezier = linear,0,0,1,1
+    bezier = almostLinear,0.5,0.5,0.75,1.0
+    bezier = quick,0.15,0,0.1,1
 
-    animation = windows, 1, 7, myBezier
-    animation = windowsOut, 1, 7, default, popin 80%
-    animation = border, 1, 10, default
-    animation = borderangle, 1, 8, default
-    animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = global, 1, 10, default
+    animation = border, 1, 5.39, easeOutQuint
+    animation = windows, 1, 4.79, easeOutQuint
+    animation = windowsIn, 1, 4.1, easeOutQuint, popin 87%
+    animation = windowsOut, 1, 1.49, linear, popin 87%
+    animation = fadeIn, 1, 1.73, almostLinear
+    animation = fadeOut, 1, 1.46, almostLinear
+    animation = fade, 1, 3.03, quick
+    animation = layers, 1, 3.81, easeOutQuint
+    animation = layersIn, 1, 4, easeOutQuint, fade
+    animation = layersOut, 1, 1.5, linear, fade
+    animation = fadeLayersIn, 1, 1.79, almostLinear
+    animation = fadeLayersOut, 1, 1.39, almostLinear
+    animation = workspaces, 1, 1.94, almostLinear, fade
+    animation = workspacesIn, 1, 1.21, almostLinear, fade
+    animation = workspacesOut, 1, 1.94, almostLinear, fade
 }
 
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
@@ -136,8 +151,8 @@ master {
 
 # https://wiki.hyprland.org/Configuring/Variables/#misc
 misc {
-    force_default_wallpaper = -1 # Set to 0 or 1 to disable the anime mascot wallpapers
-    disable_hyprland_logo = false # If true disables the random hyprland logo / anime girl background. :(
+    force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
+    disable_hyprland_logo = true # If true disables the random hyprland logo / anime girl background. :(
 }
 
 
@@ -158,8 +173,9 @@ input {
     sensitivity = 0 # -1.0 - 1.0, 0 means no modification.
 
     touchpad {
-        natural_scroll = false
+        natural_scroll = true
 		disable_while_typing = true
+		scroll_factor = 1.5
     }
 }
 
@@ -256,6 +272,10 @@ bindl = , XF86AudioPlay, exec, playerctl play-pause
 bindl = , XF86AudioPrev, exec, playerctl previous
 
 
+xwayland {
+	force_zero_scaling = true
+}
+
 ##############################
 ### WINDOWS AND WORKSPACES ###
 ##############################
@@ -270,7 +290,8 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
-windowrule = opacity 0.9 override 0.8 override 0.9 override, ^(kitty)$
+windowrule = opacity 0.9 override 0.8 override 0.9 override, class:kitty
+windowrule = opacity 1 override, class: kitty, title:^(Yazi)(.*)
 windowrulev2 = float, title:^Choose Directory$
 windowrulev2 = size 800 500, title:^Choose Directory$
 windowrulev2 = center, title:^Choose Directory$
