refactor: 增加screenshot.sh脚本

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -209,7 +209,7 @@ bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod SHIFT, J, togglesplit, # dwindle
 bind = $mainMod, C, exec, $browser, # dwindle
-bind = , Print, exec, ~/screenshot.sh
+bind = , Print, exec, ~/.config/screenshot.sh
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
