feat: 增加wezterm终端配置

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -295,3 +295,5 @@ windowrule = opacity 1 override, class: kitty, title:^(Yazi)(.*)
 windowrulev2 = float, title:^Choose Directory$
 windowrulev2 = size 800 500, title:^Choose Directory$
 windowrulev2 = center, title:^Choose Directory$
+windowrule = opacity 0.9 override 0.8 override 0.9 override, class:org.wezfurlong.wezterm
+windowrule = opacity 1 override, class: org.wezfurlong.wezterm, title:^(Yazi)(.*)
